Bug 1232338 - part 2, Fix mouse hover events to have correct refPoint value when C++APZ is enabled r=jchen